# algorithm

./: .editorconfig  .gitignore  .gitmodules
deploy_flask/: example_request.py  flask_example_request.py  flask_server_main.py  minio_example_request.py  minio_server_main.py  requirements.txt  requirements_face.txt  server_configs.py
deploy_sophon/docs/mqtt/Eclipse Paho C/: index.html  mqttc_index.html
deploy_sophon/docs/mqtt/html/: annotated.html  async__client_8h.html  async__client_8h_source.html  buffer__ref_8h.html  buffer__ref_8h_source.html  buffer__view_8h.html  buffer__view_8h_source.html  callback_8h.html  callback_8h_source.html  classes.html  classmqtt_1_1async__client.html  classmqtt_1_1buffer__ref.html  classmqtt_1_1buffer__view.html  classmqtt_1_1callback.html  classmqtt_1_1client.html  classmqtt_1_1connect__data.html  classmqtt_1_1connect__options.html  classmqtt_1_1connect__options__builder.html  classmqtt_1_1connect__response.html  classmqtt_1_1create__options.html  classmqtt_1_1create__options__builder.html  classmqtt_1_1delivery__response__options.html  classmqtt_1_1delivery__token.html  classmqtt_1_1disconnect__options.html  classmqtt_1_1disconnect__options__builder.html  classmqtt_1_1exception.html  classmqtt_1_1iaction__listener.html  classmqtt_1_1iasync__client.html  classmqtt_1_1iclient__persistence.html  classmqtt_1_1message.html  classmqtt_1_1message__ptr__builder.html  classmqtt_1_1missing__response.html  classmqtt_1_1name__value__collection.html  classmqtt_1_1persistence__exception.html  classmqtt_1_1properties.html  classmqtt_1_1property.html  classmqtt_1_1response__options.html  classmqtt_1_1response__options__builder.html  classmqtt_1_1security__exception.html  classmqtt_1_1server__response.html  (+131 more)
deploy_sophon/docs/mqtt/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  enums_0.js  enums_1.js  (+83 more)
deploy_sophon/scripts/resnet50/: gen_int8bmodel_mlir_imagenet.sh
deploy_sophon/scripts/service/: myscript.service  myscript.sh
deploy_sophon/scripts/sophon-update/: sophon_app_update.sh
deploy_sophon/sophon-app/: CMakeLists.txt
deploy_sophon/sophon-app/configs/: cameras_multi_myself.json  cameras_yolov5_myself.json
deploy_sophon/sophon-app/include/: base64.hpp  configuration.h  processor.h
deploy_sophon/sophon-app/src/: base64.cpp  ftp_upload.cpp  jsoncpp_test.cpp  main.cpp  processor.cpp  resnet.cpp  resnet50_sail_main.cpp
deploy_sophon/sophon-app/test/: curl_ftpupload_test.cpp  jsoncpp_test.cpp  openssl_test.cpp
deploy_sophon/sophon-app/test/boost/: boost_test.cpp  build.txt  get_file_size.cpp
deploy_sophon/sophon-app/test/cpp/: base64_jpg_test.cpp  build.txt  c11_chrono_test.cpp  c17_filesystem_size.cpp  c17_filesystem_test.cpp  cpp_multi_thread.cpp  cpp_multi_thread2.cpp  cpp_multi_thread3.cpp  cpp_multi_thread4.cpp
deploy_sophon/sophon-app/test/jsoncpp/: jsoncpp_test.cpp
deploy_sophon/sophon-app/test/minio/: BucketExists.cpp  ComposeObject.cpp  DownloadObject.cpp  GetObject.cpp  MakeBucket.cpp  PutObject.cpp  RemoveBucket.cpp  RemoveObject.cpp  StatObject.cpp  build.txt  minio_file_uploader.cpp  minio_getpresigned_object_url.cpp  minio_mqtt_upload.cpp  minio_upload_object.cpp
deploy_sophon/sophon-app/test/mqtt/: async_publish_time.cpp  build.txt  data_publish.cpp  multithr_pub_sub.cpp  sync_publish.cpp  topic_publish.cpp
deploy_sophon/sophon-app/test/openssl/: openssl_test.cpp
deploy_sophon/sophon-mlir/scripts/yolov5-6.1/: gen_int8bmodel_mlir_voc.sh
deploy_sophon/sophon-pipeline/examples/yolov5/: main.cpp
deploy_sophon/sophon-pipeline/release/face_recognition_demo/soc/: face_recognition_demo
deploy_sophon/sophon-pipeline/release/facedetect_demo/soc/: facedetect_demo
deploy_sophon/sophon-pipeline/release/multi_demo/soc/: multi_demo
deploy_sophon/sophon-pipeline/release/openpose_demo/soc/: openpose_demo
deploy_sophon/sophon-pipeline/release/retinaface_demo/soc/: retinaface_demo
mmpretrain/configs/: resnet50_8xb32_fenshu.py
mmpretrain/configs/_base_/datasets/: imagenet_bs32_fenshui.py
mmpretrain/configs/_base_/models/: resnest50.py
mmpretrain/configs/resnet/: resnet50_8xb32_fenshu.py
mmpretrain/mmpretrain/datasets/: categories.py  imagenet.py
mmpretrain/myself_tools/: envset.txt  export_model.py
yolov5-6.1/: envsetup.txt  get_anchor.py  requirements.txt
yolov5-6.1/models/: yolo.py
yolov5-6.1/utils/: datasets.py  general.py  loss.py
招投标/: xlsx_xlrd.py  招投标价格评分.cpp
