cmake_minimum_required(VERSION 3.10)
project(sophon-app)
include(${CMAKE_SOURCE_DIR}/cmake/common.cmake)

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR})
set(CMAKE_BUILD_TYPE "Debug")
set(CMAKE_CXX_FLAGS "-O3")
add_definitions(-w)

set(TARGET_ARCH soc)
set(SDK ${PROJECT_SOURCE_DIR}/3rdparty/soc-sdk)
set(SAIL_PATH ${PROJECT_SOURCE_DIR}/3rdparty/sophon-sail)
set(MQTT_PATH ${PROJECT_SOURCE_DIR}/3rdparty/paho-mqtt)
check_and_replace_path(${SDK})
check_and_replace_path(${SAIL_PATH})
check_and_replace_path(${MQTT_PATH})
set(CMAKE_C_COMPILER aarch64-linux-gnu-gcc)
set(CMAKE_ASM_COMPILER aarch64-linux-gnu-gcc)
set(CMAKE_CXX_COMPILER aarch64-linux-gnu-g++)
set(BM_LIBS bmlib bmrt bmcv yuv)
set(JPU_LIBS bmjpuapi bmjpulite)
set(OPENCV_LIBS opencv_imgproc opencv_core opencv_highgui opencv_imgcodecs opencv_videoio)

message("SOC-SDK: ${SDK}")
include_directories("${SDK}/include/")
include_directories("${SDK}/include/opencv4/")
link_directories("${SDK}/lib/")

message("SAIL_PATH: ${SAIL_PATH}")
include_directories("${SAIL_PATH}/include")
include_directories("${SAIL_PATH}/include/sail")
set(SAIL_LIBS "${SAIL_PATH}/lib/libsail.so")

message("PAHO-MQTT: ${MQTT_PATH}")
include_directories("${MQTT_PATH}/include")
link_directories("${MQTT_PATH}/lib")
set(MQTTLIBS paho-mqtt3c)

add_compile_definitions(USE_BMCV=1)
add_compile_definitions(USE_FFMPEG=1)
add_compile_definitions(USE_OPENCV=1)
include_directories("${PROJECT_SOURCE_DIR}/include")
aux_source_directory(./src SRC_FILES)

add_executable(sophon-app.soc ${SRC_FILES})
target_link_libraries(sophon-app.soc ${BM_LIBS} ${OPENCV_LIBS} ${JPU_LIBS} ${SAIL_LIBS} ${MQTTLIBS} pthread)
#target_link_libraries(sophon-app.soc ${SAIL_LIBS})